--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "gray-matter": "^4.0.3",
     "next": "^11.0.0",
     "react": "17.0.2",
