--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "gray-matter": "^4.0.3",
-    "next": "^11.0.0",
+    "next": "latest",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
