--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "bootstrap": "^5.1.3",
     "next": "latest",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "17.0.2",
+    "sass": "^1.45.0"
   }
 }
