--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
-    "sass": "^1.45.0"
+    "react-slick": "^0.28.1",
+    "sass": "^1.45.0",
+    "slick-carousel": "^1.8.1"
   }
 }
