--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "bootstrap": "^5.1.3",
     "next": "latest",
     "next-pwa": "^5.4.4",
@@ -18,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "sass": "^1.45.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "web3": "^1.6.1"
   }
 }
