--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.28.1",
     "sass": "^1.45.0",
     "slick-carousel": "^1.8.1",
+    "uuid": "^8.3.2",
     "web3": "^1.6.1"
   }
 }
